--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,21 @@
 body {
-  background-color: cadetblue;
+  background-color: hsl(34, 78%, 91%);
+}
+
+.main {
+  background-color: hsl(0, 4%, 14%);
+  display: flex;
+  flex-direction: column;
+}
+
+.display {
+  width: 100%;
+  background-color: hsl(0, 0%, 50%);
+}
+
+button {
+  border: 1px solid black;
+  border-radius: 5px;
 }
 
 .operation {
@@ -11,4 +27,29 @@ body {
 .sub.selected, 
 .add.selected {
   background-color: hsl(39, 100%, 50%, 70%);
+}
+
+.clear, .back {
+  background-color: hsl(208, 100%, 97%);
+}
+
+.number, .dot {
+  background-color: hsl(180, 100%, 50%);
+}
+
+/* positioning */
+
+.buttons {
+  display: flex;
+}
+
+.numbers {
+  display: flex;
+  flex-wrap: wrap-reverse;
+}
+
+.operators {
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
 }
