--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,31 @@
 body {
   background-color: hsl(34, 78%, 91%);
+  font-size: 50px;
+  display: flex;
+  justify-content: center;
 }
 
 .main {
   background-color: hsl(0, 4%, 14%);
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  padding: 5px;
+  width: 400px;
+  border-radius: 5px;
 }
 
 .display {
-  width: 100%;
   background-color: hsl(0, 0%, 50%);
+  margin-bottom: 3px;
+  text-align: end;
+  border-radius: 5px;
 }
 
 button {
   border: 1px solid black;
   border-radius: 5px;
+  font-size: 30px;
 }
 
 .operation {
@@ -38,11 +48,16 @@ button {
 }
 
 /* positioning */
+.left {
+  display: flex;
+  flex-direction: column;
+}
 
 .buttons {
   display: flex;
 }
 
+/* currently not wrap reversing because the operators is flex column*/
 .numbers {
   display: flex;
   flex-wrap: wrap-reverse;
