--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,10 @@
 body {
   background-color: hsl(34, 78%, 91%);
+  font-family: sans-serif;
+}
+
+.calc {
+  background-color: hsl(34, 78%, 91%);
   font-size: 50px;
   display: flex;
   justify-content: center;
@@ -7,17 +12,14 @@ body {
 
 .main {
   background-color: hsl(0, 4%, 14%);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding: 5px;
-  width: 400px;
+  padding: 10px;
+  width: 300px;
   border-radius: 5px;
 }
 
 .display {
   background-color: hsl(0, 0%, 50%);
-  margin-bottom: 3px;
+  margin-bottom: 10px;
   text-align: end;
   border-radius: 5px;
 }
@@ -26,45 +28,38 @@ button {
   border: 1px solid black;
   border-radius: 5px;
   font-size: 30px;
+  min-width: 75px;
+  min-height: 75px;
 }
 
 .operation {
-  background-color: orange;
+  background-color: hsl(300, 47%, 75%);
 }
 
 .dvn.selected, 
 .mtp.selected, 
 .sub.selected, 
 .add.selected {
-  background-color: hsl(39, 100%, 50%, 70%);
+  background-color: hsl(300, 47%, 75%, 70%);
 }
 
-.clear, .back {
-  background-color: hsl(208, 100%, 97%);
+.clear, .back, .percent {
+  background-color: hsl(177, 70%, 41%);
 }
 
-.number, .dot {
-  background-color: hsl(180, 100%, 50%);
-}
-
-/* positioning */
-.left {
-  display: flex;
-  flex-direction: column;
+.number, .dot, .sign {
+  background-color: hsl(160, 100%, 75%);
 }
 
 .buttons {
   display: flex;
 }
 
-/* currently not wrap reversing because the operators is flex column*/
 .numbers {
   display: flex;
   flex-wrap: wrap-reverse;
 }
 
-.operators {
+.extras {
   display: flex;
-  flex-direction: column;
-  /* align-items: center; */
 }
